# Luxoft

./: .gitignore  CMakeLists.txt  GameBoard.qml  GameLogic.js  GridModel.qml  Tile.qml  WinMessage.qml  build.sh  main.cpp  main.qml  qml.qrc
Plugins/ModelPlugin/: CMakeLists.txt  mymodel.cpp  mymodel.h
plugins/ModelPlugin/: CMakeLists.txt  logic.cpp  logic.h  mymodel.cpp  mymodel.h  plugin.cpp  plugin.h  qmldir
